Final changes to the files
