# openapi.yaml
@@ -1,4 +1,3 @@
-#Converted from json to yaml using invnentory-service/json_yaml.py
 openapi: 3.1.0
 info:
   title: Inventory Service
@@ -77,6 +76,12 @@ components:
       required:
       - detail
       title: HTTPValidationError
+    InventoryItem:
+      type: string
+      enum:
+      - tshirts
+      - pants
+      title: InventoryItem
     InventoryResponse:
       properties:
         tshirts:
@@ -93,13 +98,8 @@ components:
     InventoryUpdateRequest:
       properties:
         item:
-          type: string
-          enum:
-          - tshirts
-          - pants
-          title: Item
-          description: The name of the item in the inventory. Must be exact; MCP agent
-            handles case normalization.
+          $ref: '#/components/schemas/InventoryItem'
+          description: The name of the item ('tshirts' or 'pants').
         change:
           type: integer
           title: Change
